--- a/Site.Master
+++ b/Site.Master
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Dashboard</title>
+    <title>FinanceApp v1.1.0 | Inicio</title>
 
     <asp:PlaceHolder runat="server"></asp:PlaceHolder>
 
@@ -45,7 +45,7 @@
     <link href="css/blockUI.css" rel="stylesheet" />
     <link href="css/toastr.min.css" rel="stylesheet" />
     <script src="Scripts/axios.min.js"></script>
-    <script src="js/util.js"></script>
+    <script src="js/util.js?1.0.0"></script>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
