carga funcionalidad para notificaciones

--- a/Site.Master
+++ b/Site.Master
@@ -63,130 +63,80 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
-                <%--    <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>--%>
             </ul>
 
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
-                <!-- Navbar Search -->
-                <%--   <li class="nav-item">
-                    <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-                        <i class="fas fa-search"></i>
-                    </a>
-                    <div class="navbar-search-block">
-                        <form class="form-inline">
-                            <div class="input-group input-group-sm">
-                                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                                <div class="input-group-append">
-                                    <button class="btn btn-navbar" type="submit">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                    <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                                        <i class="fas fa-times"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </li>--%>
-
-                <!-- Messages Dropdown Menu -->
-                <%--  <li class="nav-item dropdown">
-                    <a class="nav-link" data-toggle="dropdown" href="#">
-                        <i class="far fa-comments"></i>
-                        <span class="badge badge-danger navbar-badge">3</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <a href="#" class="dropdown-item">
-     
-                            <div class="media">
-                                <img src="Theme/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
-                                <div class="media-body">
-                                    <h3 class="dropdown-item-title">Brad Diesel
-                  <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
-                                    </h3>
-                                    <p class="text-sm">Call me whenever you can...</p>
-                                    <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i>4 Hours Ago</p>
-                                </div>
-                            </div>
-               
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                 
-                            <div class="media">
-                                <img src="Theme/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-                                <div class="media-body">
-                                    <h3 class="dropdown-item-title">John Pierce
-                  <span class="float-right text-sm text-muted"><i class="fas fa-star"></i></span>
-                                    </h3>
-                                    <p class="text-sm">I got your message bro</p>
-                                    <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i>4 Hours Ago</p>
-                                </div>
-                            </div>
-                
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                     
-                            <div class="media">
-                                <img src="Theme/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-                                <div class="media-body">
-                                    <h3 class="dropdown-item-title">Nora Silvester
-                  <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
-                                    </h3>
-                                    <p class="text-sm">The subject goes here</p>
-                                    <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i>4 Hours Ago</p>
-                                </div>
-                            </div>
-               
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
-                    </div>
-                </li>--%>
                 <!-- Notifications Dropdown Menu -->
+                <div id="app">
+                    <div class="container">
+                        <template>
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="far fa-bell"></i>
-                        <span class="badge badge-warning navbar-badge">0</span>
+                        <span v-if="totalNotificaciones < 1" class="badge badge-warning navbar-badge">
+                            {{totalNotificaciones}}
+                        </span>
+                         <span v-else class="badge badge-danger navbar-badge">
+                            {{totalNotificaciones}}
+                        </span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-item dropdown-header">0 Notificaciones</span>
+                        <span class="dropdown-item dropdown-header">{{totalNotificaciones}} Notificación(es)</span>
                         <div class="dropdown-divider"></div>
-                        <%-- <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i>4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
-                        </a>--%>
-                        <%--                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-users mr-2"></i>8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
+
+                        <a href="#" class="dropdown-item" v-for="item in notificaciones" data-toggle="modal" data-target="#modalLeerNotificacion"
+                            @click="obtienedataNotificacion(item)">
+                            <i class="fas fa-envelope mr-2"></i> {{item.previa}}
+                            <span class="float-right text-muted text-sm">{{item.fecha}}</span>
                         </a>
                         <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-file mr-2"></i>3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
-                        </a>--%>
-                        <%--  <div class="dropdown-divider"></div>--%>
+
+                        <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item dropdown-footer">Ver todas mis notificaciones</a>
                     </div>
                 </li>
+
+                            
+              <div class="modal fade" id="modalLeerNotificacion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="z-index: 1064;">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="">Solicitud de correo para activación de cuenta</h5>
+                            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="card-body">
+                            <div class="form-group">
+                            <label>Ingrese su correo electrónico</label>
+                                <b-form-input type="text" class="form-control"  placeholder="Ingrese su correo electrónico"></b-form-input>
+                            </div>
+                            </div>
+                        </div>
+                         <div class="modal-footer">
+                     <b-button type="button" variant="secondary" data-dismiss="modal">Cancelar</b-button>
+                     <b-button type="button" variant="primary" @click="">Solicitar
+                    </b-button>
+                </div>
+                    </div>
+                </div>
+             </div>
+
+            </template>
+                    </div>
+                </div>
                 <li class="nav-item">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                         <i class="fas fa-expand-arrows-alt"></i>
                     </a>
                 </li>
-                <%--    <li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                        <i class="fas fa-th-large"></i>
-                    </a>
-                </li>--%>
+                <%-- <li class="nav-item">
+        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+            <i class="fas fa-th-large"></i>
+        </a>
+        </li>--%>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#logoutModal" href="#" role="button">
                         <i class="fas fa-user"></i>
@@ -194,6 +144,9 @@
                 </li>
             </ul>
         </nav>
+
+
+
         <!-- /.navbar -->
 
         <!-- Main Sidebar Container -->
@@ -280,6 +233,9 @@
         <aside class="control-sidebar control-sidebar-dark">
         </aside>
     </div>
+
+
+
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
