--- a/Site.Master
+++ b/Site.Master
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FinanceApp v1.1.0 | Inicio</title>
+    <title>PrestaStarz v1.1.0 | Inicio</title>
 
     <asp:PlaceHolder runat="server"></asp:PlaceHolder>
 
@@ -187,7 +187,7 @@
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
                 <img src="Theme/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">FinanceApp</span>
+                <span class="brand-text font-weight-light">PrestaStarz</span>
             </a>
 
             <!-- Sidebar -->
