--- a/Site.Master
+++ b/Site.Master
@@ -339,7 +339,11 @@
     <script src="js/libs/toastr.min.js"></script>
     <script src="js/libs/jquery.blockUI.messages.js"></script>
     <script src="js/libs/moment.min.js"></script>
-    <script src="js/Menu.js?1.0.0"></script>
+
+    <%--<script src="js/jq-signature.js"></script>--%>
+    <script src="js/libs/jq-signature/js/jq-signature.js"></script>
+
+    <script src="js/Menu.js?10.0.0"></script>
 
 </body>
 </html>
