--- a/Site.Master
+++ b/Site.Master
@@ -5,7 +5,7 @@
 
 <head>
 
-    <meta charset="utf-8">
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PrestaStarz v1.1.0 | Inicio</title>
 
