--- a/Site.Master
+++ b/Site.Master
@@ -259,11 +259,11 @@
         </div>
 
 
-        <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2022 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-            All rights reserved.
+         <footer class="main-footer">
+            <strong>Copyright &copy; 2022 PrestaStarZ.</strong>
+            Derechos reservados.
     <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.1.0
+        <b>Version</b> 1.0.0
     </div>
         </footer>
         <aside class="control-sidebar control-sidebar-dark">
